On mobile the (i) icon floats right to avoid the tooltip going out of the screen

--- a/src/less/components/_forms-help.less
+++ b/src/less/components/_forms-help.less
@@ -164,6 +164,10 @@
 .help-inline--section{
    &.help-inline--tooltip{
       margin-bottom: 0;
+      // on mobile the icon and tooltip float right
+      @media (max-width: @screen-xs) {
+          float: right;
+      }
    }
 }
 
